fix: sprite contextmenu z-index

--- a/src/containers/$-sprite-list.css
+++ b/src/containers/$-sprite-list.css
@@ -1,7 +1,5 @@
 .list {
     flex: none;
-    position: relative;
-    z-index: 20;
     width: 5.25rem;
     margin-left: 0.1rem;
     background: #b9ebff;
